@@ -57,3 +57,6 @@ New internal features:
   depends on membership tool like in CMF.
 - Use the EventTest test setup code from CPSCore requiring Zope 2.9.
 - CPS css_slot was renamed style_slot to comply with later CMF/Zope 3 standard.
+- The CPSDefaultTestCase no longer installs and create CPSSharedCalendars
+  unless you explicitly install CPSSharedCalendar with installProduct in your
+  test.
